Updated with .vscode/

--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ Temporary Items
 .apdisk
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
